objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Attended_Dreamforce__c</fullName>
        <formula>IMAGE( &quot;/servlet/servlet.FileDownload?file=&quot; &amp;
CASE( Dreamforce__c, 
&quot;yes&quot;, &quot;Image ID&quot;, 
&quot;No&quot;, &quot;Image ID&quot;
, &quot;&quot;),&quot;Image Not Available...&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attended Dreamforce</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DChange_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DChange Test</description>
        <inlineHelpText>DChange Test</inlineHelpText>
        <label>DChange Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dreamforce__c</fullName>
        <label>Dreamforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>